feat: port to the Slimefun5 fork (Gradle + fork API, Java-8, 1.8.8-safe)