@@ -14,11 +14,14 @@ import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 
 import javax.annotation.Nonnull;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 public class RiddenSkeletonHorse extends CustomMob {
-    private static final Set<DamageCause> RESISTANCES = Set.of(DamageCause.CRAMMING, DamageCause.POISON, DamageCause.BLOCK_EXPLOSION, DamageCause.ENTITY_EXPLOSION);
+    private static final Set<DamageCause> RESISTANCES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(DamageCause.CRAMMING, DamageCause.POISON, DamageCause.BLOCK_EXPLOSION, DamageCause.ENTITY_EXPLOSION)));
 
     public RiddenSkeletonHorse() {
         super("SKELETON_HORSE", "Skeleton Horse", EntityType.SKELETON_HORSE, 132);
@@ -46,7 +49,9 @@ public class RiddenSkeletonHorse extends CustomMob {
         }
 
         for (Entity entity : horse.getPassengers()) {
-            if (entity instanceof LivingEntity passenger && CustomMob.getByEntity(entity) instanceof CustomBoss boss) {
+            if (entity instanceof LivingEntity && CustomMob.getByEntity(entity) instanceof CustomBoss) {
+                LivingEntity passenger = (LivingEntity) entity;
+                CustomBoss boss = (CustomBoss) CustomMob.getByEntity(entity);
                 double finalHealth = horse.getHealth() + passenger.getHealth() - event.getFinalDamage();
                 if (finalHealth > 0) {
                     boss.updateBossBar(passenger, finalHealth / (passenger.getAttribute(Attribute.GENERIC_MAX_HEALTH).getBaseValue() +
@@ -64,7 +69,8 @@ public class RiddenSkeletonHorse extends CustomMob {
 
         List<Entity> passengers = event.getEntity().getPassengers();
         for (Entity passenger: passengers) {
-            if (passenger instanceof LivingEntity livingEntity) {
+            if (passenger instanceof LivingEntity) {
+                LivingEntity livingEntity = (LivingEntity) passenger;
                 livingEntity.setHealth(0);
             }
         }
